2011-06-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * tagmanager/python.c:
   Fix two bugs with triple quoted strings within comments
   and missing indentation within triple quoted strings
   (#3316966, synced from CTags SVN, patch by Elias Pschernig, thanks).


2011-06-14  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/filetypes.python:
   Add Cython keywords.


2011-06-13  Colomban Wendling  <colomban(at)geany(dot)org>

 * configure.ac, src/Makefile.am, src/makefile.win32, wscript:
   Bump dependencies to GTK >= 2.12, GLib >= 2.16 and GIO.
 * plugins/export.c, plugins/filebrowser.c, plugins/splitwindow.c,
   src/build.c, src/dialogs.c, src/document.c, src/highlighting.c,
   src/printing.c, src/project.c, src/search.c, src/ui_utils.c,
   src/vte.c:
   Deprecate ui_widget_set_tooltip_text() in favor of
   gtk_widget_set_tooltip_text().
 * configure.ac, doc/geany.html, doc/geany.txt, src/callbacks.c,
   src/keyfile.c, src/main.c, src/prefs.c, src/printing.c,
   src/printing.h:
   Enable GTK printing support unconditionally.
 * doc/geany.html, doc/geany.txt:
   Stop talking about pre-GTK 2.12 tricks.
 * geany.glade, src/interface.c:
   Fix Printing preferences page alignment.
 * src/notebook.c:
   Remove pre-GTK 2.10 tab DnD support.
 * src/pluginutils.c, tagmanager/tm_file_entry.c,
   tagmanager/tm_symbol.c, tagmanager/tm_tag.c:
   Unconditionally use GSlice allocator.


2011-06-11  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/dialogs.c, src/main.c, src/ui_utils.h:
   Always destroy open and save dialog after use. This also helps
   working around a long-living GTK+ bug, hopefully closing #3311258,
   #3304273, #3201050, #3163742, #3153120 and #2985896.


2011-06-03  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/callbacks.c, src/document.c, src/document.h, src/editor.c,
   src/search.c, src/search.h:
   Show the actual text the user searched for in messages rather than