@@ -1,3 +1,9 @@
+2011-06-16  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/document.c, src/main.c, src/ui_utils.c, src/utils.c:
+   Remove most of the checks for GIO.
+
+
 2011-06-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * tagmanager/python.c:
